--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,10 +36,7 @@ layout: compress
                          About
                          </a>
                          <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         Posts
-                         </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/projects">
-                         Projects
+                         Writings
                          </a>
                  </h3>
             </div>
