--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -148,3 +148,20 @@ table {
 dt {
     font-weight: bolder;
 }
+
+footnotes {
+  font-size: 14px;
+  margin: -10px 20px;
+}
+
+.footnotes p {
+  margin: 10px;
+}
+
+a.footnote:before {
+ content: "[";
+}
+
+a.footnote:after {
+    content: "]";
+}
